--- a/NewPass/Base.lproj/Main.storyboard
+++ b/NewPass/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -15,39 +15,32 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PasswordGeneratorViewController" customModule="NewPass" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="szE-6Y-gZ0" userLabel="Outer Container View">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" verticalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="yGf-Bb-xIM" userLabel="Inner Container View">
-                                        <rect key="frame" x="0.0" y="201.66666666666669" width="414" height="600.66666666666652"/>
+                                        <rect key="frame" x="0.0" y="96" width="320" height="356"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" ambiguous="YES" text="Password Length: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Co-qg-iHb">
-                                                <rect key="frame" x="131" y="442.33333333333337" width="152" height="16.333333333333314"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Password Length: 0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Co-qg-iHb">
+                                                <rect key="frame" x="84" y="278" width="152" height="16.5"/>
                                                 <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="14"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <slider opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="8" minValue="8" maxValue="32" translatesAutoresizingMaskIntoConstraints="NO" id="dVw-3Y-dlB">
-                                                <rect key="frame" x="97" y="466.66666666666674" width="220" height="31"/>
-                                                <color key="minimumTrackTintColor" red="0.12549019607843137" green="0.78431372549019607" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
-                                                <connections>
-                                                    <action selector="passwordLengthSliderDidMove:" destination="BYZ-38-t0r" eventType="valueChanged" id="uEv-sa-qef"/>
-                                                </connections>
-                                            </slider>
                                             <view contentMode="scaleToFill" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="exQ-vP-uMc">
-                                                <rect key="frame" x="16" y="20.000000000000028" width="382" height="32"/>
+                                                <rect key="frame" x="16" y="20" width="288" height="32"/>
                                                 <subviews>
                                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Qya-PP-pYb" customClass="PasswordLabel" customModule="NewPass" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="37.333333333333314" width="382" height="18.666666666666671"/>
+                                                        <rect key="frame" x="0.0" y="37" width="288" height="19"/>
                                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="16"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="clip" baselineAdjustment="alignBaselines" minimumFontSize="8" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a8i-8p-u4X" customClass="PasswordLabel" customModule="NewPass" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="5.3333333333333144" width="382" height="18.666666666666668"/>
+                                                        <rect key="frame" x="0.0" y="5" width="288" height="19"/>
                                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="16"/>
                                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <nil key="highlightedColor"/>
@@ -65,7 +58,7 @@
                                                 </constraints>
                                             </view>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="sNl-OK-RZN">
-                                                <rect key="frame" x="113" y="226.33333333333337" width="188" height="148"/>
+                                                <rect key="frame" x="66" y="104" width="188" height="148"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="V8r-If-vMN">
                                                         <rect key="frame" x="0.0" y="0.0" width="188" height="31"/>
@@ -171,23 +164,34 @@
                                                     <constraint firstItem="6qT-xO-QgX" firstAttribute="centerX" secondItem="sNl-OK-RZN" secondAttribute="centerX" id="ejJ-BJ-He3"/>
                                                 </constraints>
                                             </stackView>
+                                            <slider opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="8" minValue="8" maxValue="32" translatesAutoresizingMaskIntoConstraints="NO" id="dVw-3Y-dlB">
+                                                <rect key="frame" x="97" y="302" width="126" height="31"/>
+                                                <color key="minimumTrackTintColor" red="0.12549019607843137" green="0.78431372549019607" blue="0.91764705882352937" alpha="1" colorSpace="calibratedRGB"/>
+                                                <connections>
+                                                    <action selector="passwordLengthSliderDidMove:" destination="BYZ-38-t0r" eventType="valueChanged" id="uEv-sa-qef"/>
+                                                </connections>
+                                            </slider>
                                         </subviews>
                                         <constraints>
+                                            <constraint firstItem="dVw-3Y-dlB" firstAttribute="centerX" secondItem="yGf-Bb-xIM" secondAttribute="centerX" id="8iG-OF-ve1"/>
                                             <constraint firstItem="sNl-OK-RZN" firstAttribute="centerX" secondItem="yGf-Bb-xIM" secondAttribute="centerX" id="A0X-Fq-ect"/>
-                                            <constraint firstItem="1Co-qg-iHb" firstAttribute="top" secondItem="sNl-OK-RZN" secondAttribute="bottom" constant="109.99999999999994" id="Ayd-PQ-OgR"/>
-                                            <constraint firstItem="dVw-3Y-dlB" firstAttribute="centerX" secondItem="yGf-Bb-xIM" secondAttribute="centerX" id="Gzr-jx-eex"/>
-                                            <constraint firstItem="dVw-3Y-dlB" firstAttribute="top" secondItem="1Co-qg-iHb" secondAttribute="bottom" constant="8" id="KnU-Qs-o0j"/>
+                                            <constraint firstItem="dVw-3Y-dlB" firstAttribute="top" secondItem="1Co-qg-iHb" secondAttribute="bottom" constant="7.6666666666666856" id="HAt-34-Jif"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="356" id="HZg-9o-aBo"/>
                                             <constraint firstItem="sNl-OK-RZN" firstAttribute="centerY" secondItem="yGf-Bb-xIM" secondAttribute="centerY" id="N8C-CU-bbc"/>
                                             <constraint firstItem="1Co-qg-iHb" firstAttribute="centerX" secondItem="yGf-Bb-xIM" secondAttribute="centerX" id="PDv-Ny-FF1"/>
                                             <constraint firstItem="exQ-vP-uMc" firstAttribute="top" secondItem="yGf-Bb-xIM" secondAttribute="top" constant="20" id="Qdq-Dh-j8j"/>
+                                            <constraint firstAttribute="height" relation="lessThanOrEqual" constant="436.32999999999998" id="ZKH-at-nxY"/>
+                                            <constraint firstAttribute="trailing" secondItem="dVw-3Y-dlB" secondAttribute="trailing" constant="99" id="cZG-0g-6bF"/>
+                                            <constraint firstAttribute="bottom" relation="lessThanOrEqual" secondItem="dVw-3Y-dlB" secondAttribute="bottom" constant="43.333333333333258" id="dhl-Tw-Rvl"/>
                                             <constraint firstAttribute="trailing" secondItem="exQ-vP-uMc" secondAttribute="trailing" constant="16" id="iCL-fd-uN1"/>
-                                            <constraint firstAttribute="bottom" secondItem="dVw-3Y-dlB" secondAttribute="bottom" constant="19.999999999999943" id="jQx-bt-38H"/>
+                                            <constraint firstAttribute="bottom" secondItem="dVw-3Y-dlB" secondAttribute="bottom" priority="750" constant="43.5" id="l0q-rT-4fr"/>
+                                            <constraint firstItem="dVw-3Y-dlB" firstAttribute="leading" secondItem="yGf-Bb-xIM" secondAttribute="leading" constant="99" id="mPl-eg-paV"/>
                                             <constraint firstItem="exQ-vP-uMc" firstAttribute="leading" secondItem="yGf-Bb-xIM" secondAttribute="leading" constant="16" id="n4i-IS-wHe"/>
-                                            <constraint firstAttribute="trailing" secondItem="dVw-3Y-dlB" secondAttribute="trailing" constant="99" id="z2L-sp-SqN"/>
+                                            <constraint firstAttribute="bottom" secondItem="dVw-3Y-dlB" secondAttribute="bottom" constant="24" id="y7s-II-qjL"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BwI-5b-HoJ">
-                                        <rect key="frame" x="20" y="730" width="374" height="48"/>
+                                        <rect key="frame" x="20" y="460" width="280" height="48"/>
                                         <color key="backgroundColor" red="0.20000000000000001" green="0.80000000000000004" blue="0.40000000000000002" alpha="0.79591181506849318" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="48" id="ihf-b0-DpZ"/>
@@ -201,7 +205,10 @@
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="NewPass" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zZw-Ph-LnC">
-                                        <rect key="frame" x="156.33333333333334" y="24" width="101.33333333333334" height="28"/>
+                                        <rect key="frame" x="109.5" y="24" width="101.5" height="28"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="28" id="GBl-62-lT2"/>
+                                        </constraints>
                                         <fontDescription key="fontDescription" name="Menlo-Regular" family="Menlo" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -209,15 +216,17 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.19215686274509802" green="0.19215686274509802" blue="0.19215686274509802" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
+                                    <constraint firstItem="yGf-Bb-xIM" firstAttribute="top" secondItem="zZw-Ph-LnC" secondAttribute="bottom" priority="999" constant="149.66666666666666" id="7z1-Z8-ha9"/>
                                     <constraint firstItem="yGf-Bb-xIM" firstAttribute="leading" secondItem="szE-6Y-gZ0" secondAttribute="leading" id="Dqw-aU-bto"/>
                                     <constraint firstItem="zZw-Ph-LnC" firstAttribute="top" secondItem="szE-6Y-gZ0" secondAttribute="top" constant="24" id="EgR-Lz-6be"/>
                                     <constraint firstItem="zZw-Ph-LnC" firstAttribute="centerX" secondItem="szE-6Y-gZ0" secondAttribute="centerX" id="H8n-gY-Pyc"/>
+                                    <constraint firstItem="yGf-Bb-xIM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="zZw-Ph-LnC" secondAttribute="bottom" priority="750" constant="24" id="HyG-8x-N85"/>
                                     <constraint firstAttribute="trailing" secondItem="BwI-5b-HoJ" secondAttribute="trailing" constant="20" id="Jfp-Xi-SO1"/>
+                                    <constraint firstItem="yGf-Bb-xIM" firstAttribute="top" relation="lessThanOrEqual" secondItem="zZw-Ph-LnC" secondAttribute="bottom" priority="749" constant="149.5" id="R5Q-po-XpA"/>
                                     <constraint firstAttribute="trailing" secondItem="yGf-Bb-xIM" secondAttribute="trailing" id="YBp-Zp-DAt"/>
-                                    <constraint firstItem="BwI-5b-HoJ" firstAttribute="top" secondItem="yGf-Bb-xIM" secondAttribute="bottom" constant="-72.329999999999998" id="cD7-0a-wnq"/>
                                     <constraint firstAttribute="bottom" secondItem="BwI-5b-HoJ" secondAttribute="bottom" constant="40" id="fLP-sF-7he"/>
                                     <constraint firstItem="BwI-5b-HoJ" firstAttribute="leading" secondItem="szE-6Y-gZ0" secondAttribute="leading" constant="20" id="iZY-xJ-WG7"/>
-                                    <constraint firstItem="yGf-Bb-xIM" firstAttribute="top" secondItem="zZw-Ph-LnC" secondAttribute="bottom" constant="149.66666666666674" id="lHx-wH-EQS"/>
+                                    <constraint firstItem="BwI-5b-HoJ" firstAttribute="top" secondItem="yGf-Bb-xIM" secondAttribute="bottom" constant="8" id="r7q-mZ-jyM"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -247,7 +256,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="36" y="32.512315270935964"/>
+            <point key="canvasLocation" x="34.782608695652179" y="32.142857142857139"/>
         </scene>
     </scenes>
 </document>
